--- a/backend/public/css/app.css
+++ b/backend/public/css/app.css
@@ -1,13 +1,13 @@
 .container {
-    max-width: 50rem;
-    width: 100%;
+    width: clamp(20rem, 100%, 50rem);
+    padding: 1rem;
 }
 
 .menu-item {
     display: flex;
     justify-content: space-between;
-    font-size: 1.125rem; /* 18px */
-    line-height: 1.75rem; /* 28px */
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: 600;
 }
 
